 - Fixed defect #1912 Issue with curly brackets and parenthesis' in filename in ImdbPlugin
 - Fixed defect #1913 Issue with SortTitle when using title
 - Fixed defect #1918 Watched category not updated
 - Fixed defect #1922 Categories files deleted from jukebox after cleanup
 - Fixed defect #1929 Sratim plug in does not generate movie names
 - Enhancement  #1938 Add option to disable watched scanner
 - Fixed defect #1940 Anidbplugin fails to lookup non-cached animes
 - Fixed defect #1942 TV episodes with a digit first in episode name fail title detection
 - Fixed defect #1950 sorttitle displays the basefile name

MovieJukebox 2.4
----------------
 - Fixed defect  #793 Problems with more than 9 parts
 - Enhancement   #989 Multiple Directors
 - Fixed defect #1036 Removed/renamed trailers stays in XML
 - Fixed defect #1141 Allow fanart to be saved in png format
 - Fixed defect #1484 Problem with series spanning more than 8 season on set page
 - Enhancement  #1594 Setting for thumbnails per page/line for sets
 - Enhancement  #1817 The outline should have the option to limit the length
 - Fixed defect #1819 WebBrowser error halts processing
 - Enhancement  #1822 Overlay for fanart
 - Enhancement  #1823 Ability to skip genres
 - Fixed defect #1825 Order of addFrame and roundCorners changed
 - Fixed defect #1838 Library Descriptions matching another index name cause multiple indexes to be "current"
 - Enhancement  #1839 Only show Unwatched videos in the new categories
 - Fixed defect #1840 Fixed rounded corners on fanart
 - Fixed defect #1841 Trim down the index files (for Eversion)
 - Fixed defect #1844 fileImageFile is not encoded
 - Fixed defect #1845 Fanart scanner fails to find movie when title is different than original title
 - Enhancement  #1846 Add original index name to the Other category indexes
 - Enhancement  #1847 Change JPEG compression quality
 - Enhancement  #1850 Separate error log
 - Fixed defect #1851 Overwrite parameters not working anymore